# turtlebot3_autonomy-with-CLIP

./: README.md  package.xml  setup.py
config/: exploration.rviz  nav2_params.yaml  navigation.rviz  slam_params.yaml
launch/: office_exploration_launch.py  office_navigation_launch.py  office_world_launch.py  slam_launch.py
models/turtlebot3_burger_with_camera/: model.config  model.sdf  model.urdf
turtlebot3_autonomy/: __init__.py
turtlebot3_autonomy/exploration/: __init__.py  exploration_data_logger.py  exploration_monitor.py  exploration_node.py
turtlebot3_autonomy/navigation/: navigation_status_monitor.py  semantic_location_manager.py  semantic_navigator.py
turtlebot3_autonomy/path_planning/: __init__.py  rrt_planner.py
turtlebot3_autonomy/semantic_mapping/: __init__.py  interactive_query_interface.py  semantic_node.py  semantic_query_service.py
worlds/: service.world
